==> freddy120/LSM9DS0_tivacLaunchpad/LSM9DS0_tiva.c <==
#include <stdint.h>
#include <stdbool.h>
#include <math.h>
#include "inc/tm4c123gh6pm.h"
#include "inc/hw_memmap.h"
#include "inc/hw_types.h"
#include "inc/hw_i2c.h"
#include "inc/hw_gpio.h"
#include "driverlib/sysctl.h"
#include "driverlib/gpio.h"
#include "driverlib/debug.h"
#include "driverlib/pin_map.h"
#include "driverlib/fpu.h"
#include "driverlib/rom.h"
#include "driverlib/i2c.h"
#include "LSM9DS0_tiva.h"

void initMag(){

	/* CTRL_REG5_XM enables temp sensor, sets mag resolution and data rate
	Bits (7-0): TEMP_EN M_RES1 M_RES0 M_ODR2 M_ODR1 M_ODR0 LIR2 LIR1
		TEMP_EN - Enable temperature sensor (0=disabled, 1=enabled)
		M_RES[1:0] - Magnetometer resolution select (0=low, 3=high)
		M_ODR[2:0] - Magnetometer data rate select
			000=3.125Hz, 001=6.25Hz, 010=12.5Hz, 011=25Hz, 100=50Hz, 101=100Hz
		LIR2 - Latch interrupt request on INT2_SRC (cleared by reading INT2_SRC)
			0=interrupt request not latched, 1=interrupt request latched
		LIR1 - Latch interrupt request on INT1_SRC (cleared by readging INT1_SRC)
			0=irq not latched, 1=irq latched 									 */
	xmWriteByte(CTRL_REG5_XM, 0xF0); // high resolution Mag data rate - 50 Hz, enable temperature sensor

	/* CTRL_REG6_XM sets the magnetometer full-scale
	Bits (7-0): 0 MFS1 MFS0 0 0 0 0 0
		MFS[1:0] - Magnetic full-scale selection
		00:+/-2Gauss, 01:+/-4Gs, 10:+/-8Gs, 11:+/-12Gs							 */
	xmWriteByte(CTRL_REG6_XM, 0x00); // Mag scale to +/- 2GS

	/* CTRL_REG7_XM sets magnetic sensor mode, low power mode, and filters
	AHPM1 AHPM0 AFDS 0 0 MLP MD1 MD0
		AHPM[1:0] - HPF mode selection
			00=normal (resets reference registers), 01=reference signal for filtering,
			10=normal, 11=autoreset on interrupt event
		AFDS - Filtered acceleration data selection
			0=internal filter bypassed, 1=data from internal filter sent to FIFO
		MLP - Magnetic data low-power mode
			0=data rate is set by M_ODR bits in CTRL_REG5
			1=data rate is set to 3.125Hz
		MD[1:0] - Magnetic sensor mode selection (default 10)
			00=continuous-conversion, 01=single-conversion, 10 and 11=power-down */
	xmWriteByte(CTRL_REG7_XM, 0x00); // Continuous conversion mode

	/* CTRL_REG4_XM is used to set interrupt generators on INT2_XM
	Bits (7-0): P2_TAP P2_INT1 P2_INT2 P2_INTM P2_DRDYA P2_DRDYM P2_Overrun P2_WTM
	*/
	xmWriteByte(CTRL_REG4_XM, 0x00); // accelerometer data ready on INT2_XM (0x08) disable

	/* INT_CTRL_REG_M to set push-pull/open drain, and active-low/high
	Bits[7:0] - XMIEN YMIEN ZMIEN PP_OD IEA IEL 4D MIEN
		XMIEN, YMIEN, ZMIEN - Enable interrupt recognition on axis for mag data
		PP_OD - Push-pull/open-drain interrupt configuration (0=push-pull, 1=od)
		IEA - Interrupt polarity for accel and magneto
			0=active-low, 1=active-high
		IEL - Latch interrupt request for accel and magneto
			0=irq not latched, 1=irq latched
		4D - 4D enable. 4D detection is enabled when 6D bit in INT_GEN1_REG is set
		MIEN - Enable interrupt generation for magnetic data
			0=disable, 1=enable) */
	xmWriteByte(INT_CTRL_REG_M, 0x00); // Enable interrupts for mag, active-low, push-pull
	//disable any interruption
}

void calLSM9DS0(float *gbias, float *abias)
{
  uint8_t data[6] = {0, 0, 0, 0, 0, 0};
  int16_t gyro_bias[3] = {0, 0, 0}, accel_bias[3] = {0, 0, 0};
  int samples, ii;

  // First get gyro bias
  uint8_t c = gReadByte(CTRL_REG5_G);
  gWriteByte(CTRL_REG5_G, c | 0x40);         // Enable gyro FIFO
  SysCtlDelay(270000);                       // Wait for change to take effect 20ms
  gWriteByte(FIFO_CTRL_REG_G, 0x20 | 0x1F);  // Enable gyro FIFO stream mode and set watermark at 32 samples
  SysCtlDelay(14000000);  					 // delay 1000 milliseconds to collect FIFO samples

  samples = (gReadByte(FIFO_SRC_REG_G) & 0x1F); // Read number of stored samples

  for(ii = 0; ii < samples ; ii++) {            // Read the gyro data stored in the FIFO

	data[0]= gReadByte(OUT_X_L_G);
	data[1]= gReadByte(OUT_X_H_G);

	data[2]= gReadByte(OUT_Y_L_G);
	data[3]= gReadByte(OUT_Y_H_G);

	data[4]= gReadByte(OUT_Z_L_G);
	data[5]= gReadByte(OUT_Z_H_G);

    gyro_bias[0] += (((int16_t)data[1] << 8) | data[0]);
    gyro_bias[1] += (((int16_t)data[3] << 8) | data[2]);
    gyro_bias[2] += (((int16_t)data[5] << 8) | data[4]);
  }

  gyro_bias[0] /= samples; // average the data
  gyro_bias[1] /= samples;
  gyro_bias[2] /= samples;

  gbias[0] = (float)gyro_bias[0]*gRes;  // Properly scale the data to get deg/s
  gbias[1] = (float)gyro_bias[1]*gRes;
  gbias[2] = (float)gyro_bias[2]*gRes;

  c = gReadByte(CTRL_REG5_G);
  gWriteByte(CTRL_REG5_G, c & ~0x40);  // Disable gyro FIFO
  SysCtlDelay(270000);
  gWriteByte(FIFO_CTRL_REG_G, 0x00);   // Enable gyro bypass mode


  //  Now get the accelerometer biases
  c = xmReadByte(CTRL_REG0_XM);
  xmWriteByte(CTRL_REG0_XM, c | 0x40);      // Enable accelerometer FIFO
  SysCtlDelay(270000);                      // Wait for change to take effect
  xmWriteByte(FIFO_CTRL_REG, 0x20 | 0x1F);  // Enable accelerometer FIFO stream mode and set watermark at 32 samples
  SysCtlDelay(14000000);   // delay 1000 milliseconds to collect FIFO samples

  samples = (xmReadByte(FIFO_SRC_REG) & 0x1F); // Read number of stored accelerometer samples

  for(ii = 0; ii < samples ; ii++) {          // Read the accelerometer data stored in the FIFO

	data[0]= xmReadByte(OUT_X_L_A);
    data[1]= xmReadByte(OUT_X_H_A);

    data[2]= xmReadByte(OUT_Y_L_A);
    data[3]= xmReadByte(OUT_Y_H_A);

    data[4]= xmReadByte(OUT_Z_L_A);
    data[5]= xmReadByte(OUT_Z_L_A);

    accel_bias[0] += (((int16_t)data[1] << 8) | data[0]);
    accel_bias[1] += (((int16_t)data[3] << 8) | data[2]);
    accel_bias[2] += (((int16_t)data[5] << 8) | data[4]) - (int16_t)(1./aRes); // Assumes sensor facing up!
  }

  accel_bias[0] /= samples; // average the data
  accel_bias[1] /= samples;
  accel_bias[2] /= samples;

  abias[0] = (float)accel_bias[0]*aRes; // Properly scale data to get gs
  abias[1] = (float)accel_bias[1]*aRes;
  abias[2] = (float)accel_bias[2]*aRes;

  c = xmReadByte(CTRL_REG0_XM);
  xmWriteByte(CTRL_REG0_XM, c & ~0x40);    // Disable accelerometer FIFO
  SysCtlDelay(270000);
  xmWriteByte(FIFO_CTRL_REG, 0x00);       // Enable accelerometer bypass mode
}

void calcaRes()
{
	// Possible accelerometer scales (and their register bit settings) are:
	// 2 g (000), 4g (001), 6g (010) 8g (011), 16g (100). Here's a bit of an
	// algorithm to calculate g/(ADC tick) based on that 3-bit value:


	switch (aScale)
	{
	case A_SCALE_2G:
		aRes = 0.061/1000.0;
		break;

	case A_SCALE_4G:
		aRes = 0.122/1000.0;
		break;
	case A_SCALE_6G:
		aRes = 0.183/1000.0;
		break;

	case A_SCALE_8G:
		aRes = 0.244/1000.0;
		break;

	case A_SCALE_16G:
		aRes = 0.732/1000.0;
		break;

	}

}

void calcmRes()
{
	// Possible magnetometer scales (and their register bit settings) are:
	// 2 Gs (00), 4 Gs (01), 8 Gs (10) 12 Gs (11). Here's a bit of an algorithm
	// to calculate Gs/(ADC tick) based on that 2-bit value:
	//mRes = mScale == M_SCALE_2GS ? 2.0 / 32768.0 :
	//       (float) (mScale << 2) / 32768.0;

	// Gauss/LSB
	switch (mScale)
	{
	case M_SCALE_2GS:
		mRes = 0.08/1000.0;
		break;
	case M_SCALE_4GS:
		mRes = 0.16/1000.0;
		break;
	case M_SCALE_8GS:
		mRes = 0.32/1000.0;
		break;
	case M_SCALE_12GS:
		mRes = 0.48/1000.0;
		break;
	}
}

void I2CwriteByte(uint8_t address, uint8_t subAddress, uint8_t data){

	// Tell the master module what address it will place on the bus when
	// communicating with the slave.
	I2CMasterSlaveAddrSet(I2C0_BASE, address, false); // write to bus
	I2CMasterDataPut(I2C0_BASE, subAddress);

	I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_SEND_START);
    while(I2CMasterBusy(I2C0_BASE));

    I2CMasterDataPut(I2C0_BASE, data);
    I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_SEND_FINISH);
 	while(I2CMasterBusy(I2C0_BASE));

}

uint8_t I2CreadByte(uint8_t address, uint8_t subAddress){


		I2CMasterSlaveAddrSet(I2C0_BASE, address, false);
		I2CMasterDataPut(I2C0_BASE, subAddress);

		I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_SINGLE_SEND);
		while(I2CMasterBusy(I2C0_BASE));

		I2CMasterSlaveAddrSet(I2C0_BASE, address, true);
		I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_SINGLE_RECEIVE);
		while(I2CMasterBusy(I2C0_BASE));

		return( I2CMasterDataGet(I2C0_BASE));

}

void I2CreadBytes(uint8_t address, uint8_t subAddress, uint8_t *dest, uint8_t count){

	I2CMasterSlaveAddrSet(I2C0_BASE, address, false);
	I2CMasterDataPut(I2C0_BASE, subAddress);

	I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_SEND_START);
	while(I2CMasterBusy(I2C0_BASE));

	I2CMasterSlaveAddrSet(I2C0_BASE, address, true);
    I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_RECEIVE_START);
    while(I2CMasterBusy(I2C0_BASE));

    dest[0] = I2CMasterDataGet(I2C0_BASE);

    if (count == 1){

    	I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_RECEIVE_FINISH);
        while(I2CMasterBusy(I2C0_BASE));

    }else{
        int i = 0;

        for( i=1 ; i< count; i++){

           	I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_RECEIVE_CONT);
           	while(I2CMasterBusy(I2C0_BASE));

            dest[i] = I2CMasterDataGet(I2C0_BASE);

         }

       	I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_RECEIVE_FINISH);
       	while(I2CMasterBusy(I2C0_BASE));

    }
    //send control byte and read from the register from the MCU
    I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_RECEIVE_FINISH);

    //wait for MCU to finish transaction
    while(I2CMasterBusy(I2C0_BASE));

}
